== Version 0.3.32 (tzdata v2012b) - 4-Mar-2012

* Updated to tzdata version 2012b
  (http://article.gmane.org/gmane.comp.time.tz/4756).


== Version 0.3.31 (tzdata v2011n) - 6-Nov-2011

* Updated to tzdata version 2011n
  (http://article.gmane.org/gmane.comp.time.tz/4434).


== Version 0.3.30 (tzdata v2011k) - 29-Sep-2011

* Updated to tzdata version 2011k
  (http://article.gmane.org/gmane.comp.time.tz/4084).


== Version 0.3.29 (tzdata v2011h) - 27-Jun-2011

* Updated to tzdata version 2011h
  (http://article.gmane.org/gmane.comp.time.tz/3814).
* Allow the default value of the local_to_utc and period_for_local dst 
  parameter to be specified globally with a Timezone.default_dst attribute.
  Thanks to Kurt Werle for the suggestion and patch.


== Version 0.3.28 (tzdata v2011g) - 13-Jun-2011

* Add support for Ruby 1.9.3 (trunk revision 31668 and later). Thanks to 
  Aaron Patterson for reporting the problems running on the new version.
  Closes #29233.


== Version 0.3.27 (tzdata v2011g) - 26-Apr-2011

* Updated to tzdata version 2011g
  (http://article.gmane.org/gmane.comp.time.tz/3758).


== Version 0.3.26 (tzdata v2011e) - 2-Apr-2011

* Updated to tzdata version 2011e
  (http://article.gmane.org/gmane.comp.time.tz/3707).


== Version 0.3.25 (tzdata v2011d) - 14-Mar-2011

* Updated to tzdata version 2011d
  (http://article.gmane.org/gmane.comp.time.tz/3662).


== Version 0.3.24 (tzdata v2010o) - 15-Jan-2011

* Updated to tzdata version 2010o
  (http://article.gmane.org/gmane.comp.time.tz/3473).


== Version 0.3.23 (tzdata v2010l) - 19-Aug-2010

* Updated to tzdata version 2010l
  (http://article.gmane.org/gmane.comp.time.tz/3354).


== Version 0.3.22 (tzdata v2010j) - 29-May-2010

* Corrected file permissions issue with 0.3.21 release.


== Version 0.3.21 (tzdata v2010j) - 28-May-2010

* Updated to tzdata version 2010j
  (http://article.gmane.org/gmane.comp.time.tz/3225).
* Change invalid timezone check to exclude characters not used in timezone