@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2012c) - ??????????
+
+* Updated to tzdata version 2012c
+  (http://article.gmane.org/gmane.comp.time.tz/4859).
+
+
 == Version 0.3.32 (tzdata v2012b) - 4-Mar-2012
 
 * Updated to tzdata version 2012b
